test/errors/value/list/insert.yasl
const x = [ .a, .b, .c ]

x->insert(4, .d)
